--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
 .search input{
     border: 0;
     outline: 0;
-    background: #ebfffc;
+    background: #f1f9f8;
     color: #555;
     padding: 10px 25px;
     height: 60px;
